tests/snapshots/output__1.54.0_html_trait_log_log.snap
---
source: tests/output.rs
expression: "get_stdout(path, &[\"log::Log\"])"

---
log                                        Trait log::Log                                  rusty-man

SYNOPSIS
      pub trait Log: Sync + Send {
          fn enabled(&self, metadata: &Metadata<'_>) -> bool;
          fn log(&self, record: &Record<'_>);
          fn flush(&self);
      }

DESCRIPTION
      A trait encapsulating the operations required of a logger.

METHODS
   Required Methods
      enabled
            fn enabled(&self, metadata: &Metadata<'_>) -> bool

            Determines if a log message with the specified metadata would be logged.
            
            This is used by the `log_enabled!` macro to allow callers to avoid expensive computation
            of log message arguments if the message would be discarded anyway.

      log
            fn log(&self, record: &Record<'_>)

            Logs the `Record`.
            
            Note that `enabled` is *not* necessarily called before this method. Implementations of
            `log` should perform all necessary filtering internally.

      flush
            fn flush(&self)

            Flushes any buffered records.


